teamapps-client/less/components/UiImageCropper.less
/*-
 * ========================LICENSE_START=================================
 * TeamApps
 * ---
 * Copyright (C) 2014 - 2019 TeamApps.org
 * ---
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 * 
 *      http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 * =========================LICENSE_END==================================
 */
@teamapps-handle-size: 10px;

.UiImageCropper {
  display: flex;
  align-items: center;
  justify-content: space-around;
  overflow: hidden;
  position: relative;

  img {
    display: inline-block;
  }

  .cropping-frame {
    position: absolute !important;
    box-shadow: 0 0 0 5000px rgba(0, 0, 0, .5), 0 0 15px 0 rgba(0, 0, 0, .7);
    top: 10px;
    left: 10px;
    width: 100px;
    height: 100px;
    outline: none;

    &.mode-rectangle {
      border-radius: 3px;
    }
    &.mode-round {
      border-radius: 10000px;
    }

    .ui-resizable-handle {
      width: 10px;
      height: 10px;
      border: 1px solid transparent;
      transition: background-color 1s, border 1s;
    }

    &:focus .ui-resizable-handle,
    &:hover .ui-resizable-handle,
    .ui-resizable-handle:hover,
    .ui-resizable-handle:active {
      background-color: rgba(255, 255, 255, .5);
      border: 1px solid rgba(127, 127, 127, .5);
    }
  }

  .ui-resizable-n,
  .ui-resizable-s {
    left: ~"calc(50% - " @teamapps-handle-size / 2 ~")";
  }
  .ui-resizable-e,
  .ui-resizable-w {
    top: ~"calc(50% - " @teamapps-handle-size / 2 ~")";
  }

  .ui-resizable-se {
    right: -5px;
    bottom: -5px;
  }

}

